infrastructure/archive/infrastructure-apps/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/tls-passthrough: "true"
    cert-manager.io/issue-temporary-certificate: "true"
   # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app: argo-workflow-server
  name: argo-workflow-server
  namespace: argo
spec:
  ingressClassName: nginx
  rules:
    - host: argo-workflows-prod.verida-apps.com
      http:
        paths:
          - backend:
              service:
                name: argo-workflows-server
                port:
                  number: 2746
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argo-workflows-prod.verida-apps.com
      secretName: argo-workflows-prod-secret
